--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,13 @@ on:
 permissions: read-all
 
 jobs:
-  output:
-    name: Output
-    uses: ./.github/workflows/output.yml
-  # trunk:
-  #   name: Trunk
-  #   uses: ./.github/workflows/trunk-check.yml
-  #   permissions:
-  #     checks: write
-  #     contents: read
+  trunk:
+    name: Trunk
+    uses: ./.github/workflows/trunk-check.yml
+    permissions:
+      checks: write
+      contents: read
 
-  # tests:
-  #   name: Rust tests
-  #   uses: ./.github/workflows/test.yml
+  tests:
+    name: Rust tests
+    uses: ./.github/workflows/test.yml
