--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,7 @@ concurrency:
 
 jobs:
   test:
-    # trunk-ignore(actionlint/runner-label)
-    runs-on: ubuntu-latest-32-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v3
@@ -37,8 +36,13 @@ jobs:
       - uses: taiki-e/install-action@nextest
       - name: run tests
         run: |
-          OUTPUT=$(make tests)
-          echo "test-output=$OUTPUT" >> $GITHUB_OUTPUT
+          output=$(make unit 2>&1)
+          exit_code=$?
+          echo "$output"
+          if [ $exit_code -ne 0 ]; then
+            exit $exit_code
+          fi
+          echo "test-output=$output" >> $GITHUB_OUTPUT
         id: run_tests
       - name: display test output
         run: echo "${{join(steps.run_tests.outputs.test-output, '\n')}}"
