--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,9 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
       - name: run tests
         run: |
-          echo "$(make unit 2>&1 | base64 -w 0)" >> output
+          output=$(make unit 2>&1 | base64 -w 0)
           exit_code=$?
+          echo "$output"
           if [ $exit_code -ne 0 ]; then
             exit $exit_code
           fi
@@ -45,7 +46,7 @@ jobs:
       - name: get resources
         run: python scripts/compute_resources.py
         env:
-          OUTPUT: ${{ steps.run_tests.outputs.test-output }} | base64 -d
+          OUTPUT: echo "${{ steps.run_tests.outputs.test-output }}" | base64 -d
       # upload artifacts
       - name: upload resources
         uses: actions/upload-artifact@v3
