--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,13 +35,14 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
       - name: run tests
         run: |
-          output=$(make unit 2>&1 | base64 -w 0)
+          output=$(make unit 2>&1)
           exit_code=$?
           echo "$output"
           if [ $exit_code -ne 0 ]; then
             exit $exit_code
           fi
-          echo "test-output=$output" >> $GITHUB_OUTPUT
+          output_base64=$(echo "$output" | base64 -w 0)
+          echo "test-output=$output_base64" >> $GITHUB_OUTPUT
         id: run_tests
       - name: get resources
         run: python scripts/compute_resources.py
